enable logging in as administrator, enable preview for Java 12 features